<resources>
    <string name="app_name">EletricCarApp</string>
    <string name="eletric_car">Eletric Car</string>
    <string name="cars">Carros</string>
    <string name="favorites">Favoritos</string>
    <string name="price">Preço</string>
    <string name="price_value">R$300.000</string>
    <string name="battery">Bateria</string>
    <string name="battery_value">500 KWh</string>
    <string name="power">Potencia</string>
    <string name="power_value">300 kWh</string>
    <string name="recharge">Recarga</string>
    <string name="recharge_value">65 minutos</string>
    <string name="preco_kwh">Preço kWh</string>
    <string name="km_percorrido">Km percorrido</string>
    <string name="calculate">Calcular</string>
    <string name="no_wifi">Ops, internet indisponível</string>
    <string name="response_error">Algo deu errado, por favor tente novamente mais tarde</string>
    <string name="saved_calc">saved_calc</string>
    <string-array name="array_cities">
        <item>Araraquara</item>
        <item>Taquaritinga</item>
        <item>São Paulo</item>
        <item>Rio de Janeiro</item>
    </string-array>
</resources>