<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eletric_car"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_tab_cars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cars"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_title" />

    <TextView
        android:id="@+id/text_tab_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:text="@string/favorites"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/text_tab_cars"
        app:layout_constraintTop_toBottomOf="@id/text_title"
        app:layout_constraintTop_toTopOf="@id/text_tab_cars" />

    <ImageView
        android:id="@+id/image_car"
        android:layout_width="300dp"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/eletric_car"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/text_tab_favorites"/>

    <TextView
        android:id="@+id/text_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_car"/>

    <TextView
        android:id="@+id/text_price_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_value"
        android:textSize="24sp"
        android:layout_marginLeft="30dp"
        app:layout_constraintStart_toEndOf="@id/text_power"
        app:layout_constraintTop_toBottomOf="@id/image_car"
        />

    <TextView
        android:id="@+id/text_battery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battery"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_price"/>

    <TextView
        android:id="@+id/text_battery_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battery_value"
        android:textSize="24sp"
        android:layout_marginLeft="30dp"
        app:layout_constraintStart_toEndOf="@id/text_power"
        app:layout_constraintTop_toBottomOf="@id/text_price"
        />

    <TextView
        android:id="@+id/text_power"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/power"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_battery"/>

    <TextView
        android:id="@+id/text_power_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/power_value"
        android:textSize="24sp"
        android:layout_marginLeft="30dp"
        app:layout_constraintStart_toEndOf="@id/text_power"
        app:layout_constraintTop_toBottomOf="@id/text_battery"
        />

    <TextView
        android:id="@+id/text_recharge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recharge"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_power"/>

    <TextView
        android:id="@+id/text_recharge_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recharge_value"
        android:textSize="24sp"
        android:layout_marginLeft="30dp"
        app:layout_constraintStart_toEndOf="@id/text_power"
        app:layout_constraintTop_toBottomOf="@id/text_power"
        />


</androidx.constraintlayout.widget.ConstraintLayout>