<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_car"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/gray"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_card_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_car"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/eletric_car"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_price"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_car" />

            <TextView
                android:id="@+id/text_price_value"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/price_value"
                app:layout_constraintStart_toEndOf="@id/text_power"
                app:layout_constraintTop_toBottomOf="@id/image_car"
                app:layout_constraintTop_toTopOf="@id/text_price" />

            <TextView
                android:id="@+id/text_battery"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/battery"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_price" />

            <TextView
                android:id="@+id/text_battery_value"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/battery_value"
                app:layout_constraintStart_toEndOf="@id/text_power"
                app:layout_constraintTop_toBottomOf="@id/text_price" />

            <TextView
                android:id="@+id/text_power"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/power"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_battery" />

            <TextView
                android:id="@+id/text_power_value"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/power_value"
                app:layout_constraintStart_toEndOf="@id/text_power"
                app:layout_constraintTop_toBottomOf="@id/text_battery" />

            <TextView
                android:id="@+id/text_recharge"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/recharge"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_power" />

            <TextView
                android:id="@+id/text_recharge_value"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginBottom="16dp"
                android:text="@string/recharge_value"
                app:layout_constraintBottom_toBottomOf="@id/cl_card_content"
                app:layout_constraintStart_toEndOf="@id/text_power"
                app:layout_constraintTop_toBottomOf="@id/text_power" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>